--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,16 +10,18 @@
 </div>
 <div class="section group">
     <div class="col span_2_of_5">
-        <img src="/image/se.svg">
     </div>
     <div class="col span_3_of_5 bigbody bigpadright">
         In our more than 25 years of business,
         we have helped Fortune 500 companies improve productivity.
-        We engineered foundations for lucrative startups.
-        We produced white labeled developer kits for mobile applications.
-        We built tools for non-profits.
-        We hosted thousands of web sites.
-        Simply, we helped countless clients translate their vision into elegantly designed software.
+        We have engineered foundations for lucrative startups.
+        We have produced white labeled developer kits for mobile applications.
+        We have built business intelligence tools for non-profits.
+        We have hosted thousands of web sites.
+                Simply, we helped countless clients translate their vision into elegantly designed software.
+
+        <br>
+        <a href="/contact" class="request-case-study">REQUEST A CASE STUDY.</a>
 
     </div>
 </div>
@@ -35,24 +37,24 @@
         <h3>Visual Design</h3>
 
         <p>Post Tool has been involved in the San Francisco design community since the early 90s.
-            We worked with greats like Michael Vanderbyl and Michael Cronan. We taught print and interaction
-            design at the California College of the Arts. We get graphic design. And whether you need
+            We worked and learned from the greats like Michael Vanderbyl and Michael Cronan. We taught print and
+            interaction design at the California College of the Arts. We get graphic design. And whether you need
             direction or have a well established brand, we can accomodate.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Software Development</h3>
 
         <p>We like to produce applications that can operate with a plan that is appropriate
-            to our client. We are experts at Java, Python, Javascript, Objective C and Swift. We have
-        used all major SQL databases with various persitence layers as well as Mongo and Redis.</p>
+            to our client. We are experts at Java, Python, Javascript, Objective-C and Swift. We have
+            used all major SQL databases with various persitence layers as well as Mongo and Redis.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Technical Documentation</h3>
 
         <p>While some of our clients come to us with requirements and wireframes in hand,
             many do not. One we get an idea of the scope of your application we can produce
-        architecture diagrams, functional requirements, wireframes, work flow diagrams,
-        entity-relationship diagrams, and more.</p>
+            architecture diagrams, functional requirements, wireframes, work flow diagrams,
+            entity-relationship diagrams, and more.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Content Management</h3>
@@ -66,10 +68,9 @@
     <div class="col span_1_of_5 hspan_2">
         <h3>Integration</h3>
 
-        <p>You have data: its in Excel, or an SQL data base, on Facebook, Google spreadsheets, ... You also have
-            existing applications
-            and systems in your private network. We have experience with many platforms and ready to help provide
-            strategy and technical
+        <p>You have data: its in Excel, on Facebook, Google spreadsheets, in a SQL database, ... You also have
+            existing applications and systems in your private network.
+            We have experience with many platforms and ready to help provide strategy and technical
             resources to integrate and monitor disparate systems effectively.</p>
     </div>
 
@@ -127,8 +128,8 @@
 
 
         </div>
-        <div class="prompt"> Interested in learning more about our successful realationships with our clients?<br>
-            <a href="#">REQUEST A CASE STUDY.</a></div>
+        <div class="prompt"> Interested in learning more about our successful relationships with our clients?<br>
+            <a href="/contact">REQUEST A CASE STUDY.</a></div>
     </div>
     <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
         <ul>
@@ -183,15 +184,15 @@
             <li>Adobe Masters Class: Web Site Redesign 2001</li>
             <li>MovingType, Designing for Time and Space</li>
             <li>Design Culture Now</li>
-            <li>Sonic Graphics, Seeing Sound</li>
-            <li>Radical Graphics, Chronicle Books</li>
+            <li>Sonic Graphics, <br>Seeing Sound</li>
+            <li>Radical Graphics, <br>Chronicle Books</li>
             <li>Type in Motion, Rizzoli</li>
-            <li>Typographics Three, Hearst Books Intl.</li>
-            <li>Cool Sites, Hearst Books Intl.</li>
-            <li>Eye Magazine &lsquo;Serious Doodling&rsquo;</li>
+            <li>Typographics Three, <br>Hearst Books Intl.</li>
+            <li>Cool Sites, <br>Hearst Books Intl.</li>
+            <li>Eye Magazine <br>&lsquo;Serious Doodling&rsquo;</li>
             <li>IMG SRC 100</li>
             <li>Graphic Design in America, Rockport Publishers</li>
-            <li>Communication Arts &lsquo;Post Tool design&rsquo; </li>
+            <li>Communication Arts <br>&lsquo;Post Tool design&rsquo; </li>
             <li>Popeye Magazine-Japan &lsquo;PostTool&rsquo; </li>
             <li>C - NetTelevision</li>
             <li>MSNBC Television, The Site</li>
@@ -200,9 +201,9 @@
             <li>ID Magazine &lsquo;An Interpretation of Dreams&rsquo;</li>
             <li>ID Magazine &lsquo;Electronic Youth&rsquo;</li>
             <li>Graphis Magazine &lsquo;Multimedia by the Bay&rsquo;</li>
-            <li>The AIGA Journal &lsquo;Absolute Individuals&rsquo;</li>
+            <li>The AIGA Journal <br>&lsquo;Absolute Individuals&rsquo;</li>
             <li>Upper &amp; lowercase Magazine &lsquo;PostTool design&rsquo;</li>
-            <li>On-line Design Magazine &lsquo;Digitizing ...&rsquo;</li>
+            <li>On-line Design Magazine &lsquo;Digitizing the Child Within&rsquo;</li>
         </ul>
 
     </div>
@@ -232,10 +233,9 @@
     <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
     </div>
 </div>
+<% include footer %>
 </div>
-
-<!--foot-->
-</html>
+<% include foot %>
 
 
 
