--- a/views/process.ejs
+++ b/views/process.ejs
@@ -1,52 +1,47 @@
 <% include head %>
 <% include nav %>
+<div id="overlay"></div>
 <div id="root">
     <div class="section group">
-        <div class="col span_5_of_5 ">
-            <div class="bighead bighead-barleft bigpadright">Our approach is iterative, concise and inclusive.</div>
+    <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
+            Our approach is iterative, concise and inclusive.
         </div>
 
     </div>
 
 
     <div class="section group padboth">
-        <div class="col span_3_of_5">
-            <div class="bighead">Working With Us</div>
+          <div class="col span_2_of_5"></div>
+      <div class="col span_3_of_5">
+            <h3 style="border-bottom: 1px solid #333;">Working With Us</h3>
             <div class="medium">
                 Our process builds and supports the best opportunities currently available.
-            </div>
-            <div class="prompt"> Interested in learning more about our successful realationships with our clients?<br>
-                <a href="#">REQUEST A CASE STUDY.</a></div>
-        </div>
-        <div class="col span_2_of_5">
-            TALK ABOUT DESIGN THINKINGIHEREl’s software development process ensures success.We partner with technology
-            companies, teams and individuals around the world to create resource plans that are appropriate to your
-            project. Project management is facilitated through sophisticated web and mobile based software. We also
-            partner with select designers and design agencies to create beautiful and usable interfaces.
-            Our product is transparent. All documents and code are housed in versioned repositories that we share freely
-            with our clients. Sometimes our clients are researchers and developers who participate actively in the
-            project.
-            Post Tool classifies all software development projects into phases. A typical project progresses through
+
+                 Post Tool classifies all software development projects into phases. A typical project progresses through
             each of the following phases sequentially. Often we loop through the phases continuously as needs and
             requirements grow in complexity. Our goal is to keep the software usable and logically consistent as it
             adapts to use and matures.
-
+            </div>
+            <div class="prompt"> Interested in learning more about our successful relationships with our clients?<br>
+                <a href="/contact">REQUEST A CASE STUDY.</a></div>
         </div>
 
-        <div class="col span_5_of_5 padboth">
-            <img src="image/gantt.svg">
+     </div>
+   <div class="section group padboth">
+        <div class="col span_2_of_5"></div>
+        <div class="col span_3_of_5">
+            <img src="image/gantt.svg" width="600">
         </div>
 
     </div>
 
     <div class="section group padboth capabilities">
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Discover </h3>
-
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
+            <h3>Discovery </h3>
+        </div><div class="col span_2_of_5">
             <p>One goal of discovery is to establish a succinct vocabulary that all participants can use to communicate.
-                With our scientific clients, the terminology might be highly specific. But more frequently, there are
-                discrepancies in language and terminology that must be identified. In either case, we learn your
-                language, then refine, standardize, and document it. We then use this language to establish all the
+               We learn your language, then refine, standardize, and document it. We then use this language to establish all the
                 requirements and desires of key stakeholders.</p>
 
             <p>Sometimes software is developed to support an existing process and sometimes is offers something
@@ -55,15 +50,17 @@
                 interject software where we can improve the experience. If the product represents something completely
                 new, we attempt to relate it to existing processes and understand what we intend to improve. </p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Plan</h3>
-
-            <p>We quantify behavior in terms of activities by persona (or role) and document workflows for significant
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
+            <h3>Planning</h3>
+        </div><div class="col span_2_of_5">
+            <p>We quantify behavior in terms of activities by role and document workflows for significant
                 activities. This mapping allows us to estimate resource requirements in detail.</p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Document</h3>
-
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
+            <h3>Documentation</h3>
+        </div><div class="col span_2_of_5">
             <p>The documentation represents an overview of the application as well as wireframes and process flows for
                 identified personas.
                 From the discovery and planning documents, we can implement initial wireframes. These wireframes can be
@@ -75,95 +72,76 @@
                 what we consider the most difficult part of the process.
             </p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Prototype</h3>
-
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
+            <h3>Prototyping</h3>
+        </div><div class="col span_2_of_5">
             <p>Sometimes we have the luxury of prototyping an application before we build out the entire specification.
                 This requires the team and stakeholders to identify the highest ranked features for development in the
                 most efficient manner possible. This work allows us to test assumptions directly with users in front of
                 a device.</p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Test</h3>
-
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
+            <h3>Testing</h3>
+        </div><div class="col span_2_of_5">
             <p>We facilitate user testing in many forms: online, in person, using wireframes, HTML or with a finished
                 application. We establish metrics that are tracked and analyzed. This allows us to develop a roadmap for
                 revision of existing features or the development of new ones.</p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
             <h3>Visual Design</h3>
-
+        </div><div class="col span_2_of_5">
             <p>Post Tool has received dozens of awards for its user interface innovation throughout the &lsquo;90s.
                 Since then we have partnered with some of the best design firms in the world to produce inventive and
                 sophisticated user interfaces.</p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
             <h3>Platform Selection</h3>
-
+        </div><div class="col span_2_of_5">
             <p>There is a wide assortment of platforms, libraries, frameworks, licenses, programming languages, etc.
                 Java, Ruby, Django, Apache ... &ldquo;The Cloud&rdquo; If you are familiar with the jargon, we will
                 openly discuss details in a technical way. If you are not, we will walk through the pros and cons of all
                 approaches especially in terms of cost of maintenance.</p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
             <h3>Content Management</h3>
-
+        </div><div class="col span_2_of_5">
             <p>Your data ecosystem is complex. Often legacy systems must be closely migled with new functionality. We
                 develop content strategies and processes that help you identify, prioritize, produce and control the
                 flow of content to meet the needs of all persona. We customize and configure sophisticated content
                 management systems capable of managing &lsquo;big data&rsquo; scale content and media.</p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
             <h3>Application Development</h3>
-
+        </div><div class="col span_2_of_5">
             <p>As more daily work moves online, the need for increasingly complex web applications &ndash; either as a
                 complement to existing products or software as service &ndash; becomes essential. Our UX, design and
                 development teams build highly functional and custom applications to fit your needs. We believe they
                 should also be engaging. Users want intuitive interfaces that allow them to drag, drop, watch and play.
                 We&rsquo;ve pioneered the design and technology behind many of these paradigms.</p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Evaluate </h3>
-
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
+            <h3>Evaluatation </h3>
+        </div><div class="col span_2_of_5">
             <p>Here we are. The application is in beta. Does it meet our expectations? Where do we go from here? These
                 questions with key stakeholders and a round of formal user testing will inform our next steps.</p>
         </div>
-        <div class="col span_1_of_5 hspan_2">
-            <h3>Maintain</h3>
-
+        <div class="col span_2_of_5"></div>
+        <div class="col span_1_of_5">
+            <h3>Maintenance</h3>
+        </div><div class="col span_2_of_5">
             <p>A primary project goal is to enable our clients to self-sustain the success of an application. After
                 completing a project, we collaborate with you to determine how many team members you need to maintain
                 digital assets, help train your people to use the necessary systems and work with you to develop a plan
                 for future maintenance.</p>
         </div>
-
     </div>
-    <!--
-
-    Our process builds and supports the best opportunities currently available.
-    Working With Us
-    Our approach is iterative, concise and inclusive.
-    TALK ABOUT DESIGN THINKINGIHEREl’s software development process ensures success.We partner with technology companies, teams and individuals around the world to create resource plans that are appropriate to your project. Project management is facilitated through sophisticated web and mobile based software. We also partner with select designers and design agencies to create beautiful and usable interfaces.
-    Our product is transparent. All documents and code are housed in versioned repositories that we share freely with our clients. Sometimes our clients are researchers and developers who participate actively in the project.
-    Post Tool classifies all software development projects into phases. A typical project progresses through each of the following phases sequentially. Often we loop through the phases continuously as needs and requirements grow in complexity. Our goal is to keep the software usable and logically consistent as it adapts to use and matures.
-
-        Request our Case Study Document
-
-
-    Critical Phases
-    Research
-    Documentation
-    Design & Development
-    QA
-    Evaluate & Maintain
-    Proof
-    Evolve & Maintain
-    Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
-    Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
-    Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
-    Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
-    Waterfall, Responsive, Iterative, Collaborative definition here... ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis imperdiet, eleifend eros ut, suscipit lorem. Vestibulum sagittis nisl ut purus congue maximus. Aenean risus quam, porta sit amet sagittis sed, finibus vel lorem. Integer viverra non augue et cursus.
-    -->
-
+<% include footer %>
 </div>
-</html>
+<% include foot %>
