--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,7 +15,6 @@ body {
     margin: 0;
 }
 
-
 #root {
     background-color: #EEEFEA;
     margin: 80px 20px 0 0;
@@ -33,6 +32,7 @@ body {
     font-size: 13px;
     color: #333;
     padding-bottom:10px;
+    letter-spacing: .01em;
 }
 
 h1, .bighead {
@@ -45,7 +45,7 @@ h1, .bighead {
 
 .bighead-barleft {
     border-left: 16px solid #111;
-    padding: 64px;
+    padding: 64px 64px 48px 64px;
 }
 
 .bigbody {
@@ -69,7 +69,7 @@ h3, .head {
 }
 
 .capabilities h3 {
-    height: 60px;
+    height:30px;
     border-bottom: 3px solid #eee;
 }
 .capabilities h3:hover {
@@ -83,14 +83,51 @@ h3, .head {
 }
 
 .prompt {
-    padding: 10px 20px 0 40%;
+    padding: 10px 20px 0 0;
+    letter-spacing: .02em;
 }
-.prompt a {
+#root a {
     text-transform: uppercase;
     text-decoration: none;
-    color: #333;
+    color: #666;
     font-size:12px;
+    font-weight: bold;
 }
+#root a:hover {
+    background-color: #111;
+    color: #fff;
+}
+
+#root form {
+    line-height: 20px;
+}
+#root form label {
+    font-size: 10px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+#root form input, form textarea {
+    font-family: "Helvetica Neue";
+    font-size: 17px;
+    padding: 4px;
+    margin: 0 0 8px 0;
+    border: 1px solid #eee;
+    width: 100%;
+}
+.case-info {
+
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -98,12 +135,13 @@ h3, .head {
 /* overlay */
 @media only screen and (min-width: 900px) {
     #overlay {
-        background-color: #fff;
         position: absolute;
         top: 120px;
         left: 1000px;
         width: 400px;
         height: 400px;
+        background-color: #fff;
+        display: none;
     }
 }
 
@@ -112,6 +150,6 @@ h3, .head {
 
 /**** smaller 8?*/
 
-@media only screen and (min-width: 1100px) {
-    #root {width: 1100px;}
+@media only screen and (min-width: 1150px) {
+    #root {width: 1150px;}
 }
