--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,42 +1,61 @@
 
 @media only screen and (min-width: 900px) {
+#bz {
+    position: fixed;
+        z-index: 9;
+    top: -100px;
+    left:-150px;
+    width: 400px;
+    height: 400px;
+    opacity: 0;
+/*http://www.colorzilla.com/gradient-editor/#eeefea+50,eeefea+100&1+50,0+100;Custom*/
+background: -moz-radial-gradient(center, ellipse cover,  rgba(238,239,234,0.75) 32%, rgba(238,239,234,0) 79%, rgba(238,239,234,0) 80%);
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(32%,rgba(238,239,234,0.75)), color-stop(79%,rgba(238,239,234,0)), color-stop(80%,rgba(238,239,234,0)));
+background: -webkit-radial-gradient(center, ellipse cover,  rgba(238,239,234,0.75) 32%,rgba(238,239,234,0) 79%,rgba(238,239,234,0) 80%);
+background: -o-radial-gradient(center, ellipse cover,  rgba(238,239,234,0.75) 32%,rgba(238,239,234,0) 79%,rgba(238,239,234,0) 80%);
+background: -ms-radial-gradient(center, ellipse cover,  rgba(238,239,234,0.75) 32%,rgba(238,239,234,0) 79%,rgba(238,239,234,0) 80%);
+background: radial-gradient(ellipse at center,  rgba(238,239,234,0.75) 32%,rgba(238,239,234,0) 79%,rgba(238,239,234,0) 80%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfeeefea', endColorstr='#00eeefea',GradientType=1 );
 
+}
+
+    #logo {
+        position: fixed;
+        z-index: 10;
+        top: 30px;
+        left: 0;
+    }
     nav {
         position: fixed;
         z-index: 10;
         top: 0;
-        left: 0;
-        width: 1100px;
+        left: 236px;
         height: 60px;
         padding-top: 25px;
-        background-color: #FCF749;
     }
 
-    nav img {
-        float: left;
-        padding: 0 90px 0 66px;
-    }
 
     nav ul {
         list-style-type: none;
         margin: 25px 0 0 0;
         padding: 0;
-        float: left;
     }
 
     nav li {
-        float: left;
-        width: 205px;
+        width: 225px;
+        height: 20px;
+        float:left;
+        text-align: right;
     }
 
     nav li a {
         font-family: "Helvetica Neue Condensed Bold", sans-serif;
         text-decoration: none;
         text-transform: uppercase;
-        color: #111;
+        color: #000;
         font-size: 16px;
         letter-spacing: 2px;
-        padding: 10px 10px 17px;
+        padding: 2px 2px 2px 2px;
     }
 
     nav li a:hover {
@@ -45,7 +64,7 @@
     }
 
     nav li a.selected {
-        color: #888;
+        color: #666;
     }
 
     nav li a.selected:hover {
