--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,19 +7,40 @@
         </div>
 
     </div>
+    <div class="section group">
+
+        <div class="case-info col span_5_of_5 padboth">
+            <form>
+                <label>Your Name</label><br>
+                <input type="text" name="name"><br>
+                <label>Email or Phone</label><br>
+                <input type="text" name="email"><br>
+                <label>Company</label><br>
+                <input type="text" name="company"><br>
+                <label>Message</label><br>
+                <textarea name="message" rows="4"></textarea><br>
+                <a href="#">SEND REQUEST.</a>
+            </form>
+        </div>
+
+    </div>
+
+
+
+    <% include footer %>
 </div>
-                <img src="/image/se.svg">
-There is much more
+<% include foot %>
+  <img src="/image/se.svg">
+    There is much more
 
+    Our clients are Fortune 500 companies, startups, nonprofits, universities, publishers, technologists,
+    philanthropists and most importantly, our partners.
+    We value our clients on a real scale; as experts in their field and therefore partners in collaboration.
+    Some of our most exciting work is not available to the general public.
+    Contact us if you want to know more.
 
-Our clients are Fortune 500 companies, startups, nonprofits, universities, publishers, technologists, philanthropists and most importantly, our partners.
-We value our clients on a real scale; as experts in their field and therefore partners in collaboration.
-Some of our most exciting work is not available to the general public.
-Contact us if you want to know more.
+    Business development
+    business@posttool.com
 
-Business development
-business@posttool.com
-
-Press inquiries
-press@posttool.com
-</html>
+    Press inquiries
+    press@posttool.com
