--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -1,3 +1,6 @@
+    <script src="/js/lib/jquery-2.1.1.min.js"></script>
+    <script src="/js/lib/move.js"></script>
+    <script src="/js/pt.js" type="text/javascript"></script>
 
 <!--foot-->
 </html>
