--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,8 @@
         <!--Design-driven application development. Expertly produced technology.-->
     </div>
 </div>
-<div class="section group">
-    <div class="col span_2_of_5">
-    </div>
+<div class="section group padboth">
+    <div class="col span_2_of_5"></div>
     <div class="col span_3_of_5 bigbody bigpadright">
         In our more than 25 years of business,
         we have helped Fortune 500 companies improve productivity.
@@ -26,7 +25,7 @@
     </div>
 </div>
 
-
+<a name="capabilities"></a>
 <div class="section group padboth capabilities">
     <div class="col span_5_of_5" style="padding:0">
         <div class="col span_2_of_5 bighead" style="padding:0">Capabilities</div>
@@ -115,6 +114,7 @@
 
 </div>
 
+<a name="clients"></a>
 
 <div class="section group padboth">
     <div class="col span_3_of_5">
@@ -164,6 +164,7 @@
     </div>
 </div>
 
+<a name="press"></a>
 
 <div class="section group padboth">
     <div class="col span_2_of_5">
@@ -207,6 +208,8 @@
         </ul>
 
     </div>
+
+
     <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
         <h3>Notable Lectures</h3>
         <ul>
