--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,22 +1,16 @@
 <div id="bz"></div>
 <div id="logo"><a href="/"><img src="/image/logo.svg" id="logo-img"></a></div>
+<div id="menu-button"></div>
 <nav>
     <ul>
         <li><a href="/company">Company</a>
             <ul>
-                <li><a href="#what">What We Do</a></li>
-                <li><a href="#capabilities">Capabilities</a></li>
-                <li><a href="#who">Who We Work With</a></li>
-                <li><a href="#watch">Trend Watch</a></li>
-                <li><a href="#press">Press</a></li>
+                <li><a href="/company#capabilities">Capabilities</a></li>
+                <li><a href="/company#clients">Clients</a></li>
+                <li><a href="/company#press">Press</a></li>
             </ul>
         </li>
         <li><a href="/process">Process</a></li>
         <li><a href="/contact">Contact</a></li>
     </ul>
 </nav>
-<script>
-    var p = document.location.pathname;
-    if (p == '/') p = '/company';
-    $("nav").find("a[href='"+p+"']").addClass("selected");
-</script>
