--- a/views/process.ejs
+++ b/views/process.ejs
@@ -27,16 +27,12 @@
         </div>
 
      </div>
-   <div class="section group padboth">
-        <div class="col span_2_of_5"></div>
-        <div class="col span_3_of_5">
-            <img src="image/gantt.svg" width="600">
-        </div>
 
-    </div>
 
     <div class="section group padboth capabilities">
-        <div class="col span_2_of_5"></div>
+        <div class="col span_2_of_5">
+            <img id="gantt" src="image/gantt.svg" width="430">
+        </div>
         <div class="col span_1_of_5">
             <h3>Discovery </h3>
         </div><div class="col span_2_of_5">
@@ -127,7 +123,7 @@
         </div>
         <div class="col span_2_of_5"></div>
         <div class="col span_1_of_5">
-            <h3>Evaluatation </h3>
+            <h3>Evaluation </h3>
         </div><div class="col span_2_of_5">
             <p>Here we are. The application is in beta. Does it meet our expectations? Where do we go from here? These
                 questions with key stakeholders and a round of formal user testing will inform our next steps.</p>
