--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,23 +1,56 @@
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li a {
+    font-family: "Helvetica Neue Condensed Bold", sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #000;
+    font-size: 16px;
+    letter-spacing: 2px;
+    padding: 2px;
+}
+
+nav li a:hover {
+    color: #fff;
+    background-color: #000;
+}
+
+nav li a.selected {
+    color: #666;
+}
+
+nav li a.selected:hover {
+    color: #fff;
+    background-color: #000;
+}
+
+#menu-button {
+    visibility: hidden;
+}
 
 @media only screen and (min-width: 900px) {
-#bz {
-    position: fixed;
+    #bz {
+        position: fixed;
         z-index: 9;
-    top: -100px;
-    left:-150px;
-    width: 400px;
-    height: 400px;
-    opacity: 0;
-/*http://www.colorzilla.com/gradient-editor/#eeefea+50,eeefea+100&1+50,0+100;Custom*/
-background: -moz-radial-gradient(center, ellipse cover,  rgba(238,239,234,0.75) 32%, rgba(238,239,234,0) 79%, rgba(238,239,234,0) 80%);
-background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(32%,rgba(238,239,234,0.75)), color-stop(79%,rgba(238,239,234,0)), color-stop(80%,rgba(238,239,234,0)));
-background: -webkit-radial-gradient(center, ellipse cover,  rgba(238,239,234,0.75) 32%,rgba(238,239,234,0) 79%,rgba(238,239,234,0) 80%);
-background: -o-radial-gradient(center, ellipse cover,  rgba(238,239,234,0.75) 32%,rgba(238,239,234,0) 79%,rgba(238,239,234,0) 80%);
-background: -ms-radial-gradient(center, ellipse cover,  rgba(238,239,234,0.75) 32%,rgba(238,239,234,0) 79%,rgba(238,239,234,0) 80%);
-background: radial-gradient(ellipse at center,  rgba(238,239,234,0.75) 32%,rgba(238,239,234,0) 79%,rgba(238,239,234,0) 80%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfeeefea', endColorstr='#00eeefea',GradientType=1 );
+        top: -120px;
+        left: -150px;
+        width: 300px;
+        height: 300px;
+        opacity: 0;
+        /*http://www.colorzilla.com/gradient-editor/#eeefea+50,eeefea+100&1+50,0+100;Custom*/
+        background: -moz-radial-gradient(center, ellipse cover, rgba(238, 239, 234, 0.75) 32%, rgba(238, 239, 234, 0) 79%, rgba(238, 239, 234, 0) 80%);
+        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(32%, rgba(238, 239, 234, 0.75)), color-stop(79%, rgba(238, 239, 234, 0)), color-stop(80%, rgba(238, 239, 234, 0)));
+        background: -webkit-radial-gradient(center, ellipse cover, rgba(238, 239, 234, 0.75) 32%, rgba(238, 239, 234, 0) 79%, rgba(238, 239, 234, 0) 80%);
+        background: -o-radial-gradient(center, ellipse cover, rgba(238, 239, 234, 0.75) 32%, rgba(238, 239, 234, 0) 79%, rgba(238, 239, 234, 0) 80%);
+        background: -ms-radial-gradient(center, ellipse cover, rgba(238, 239, 234, 0.75) 32%, rgba(238, 239, 234, 0) 79%, rgba(238, 239, 234, 0) 80%);
+        background: radial-gradient(ellipse at center, rgba(238, 239, 234, 0.75) 32%, rgba(238, 239, 234, 0) 79%, rgba(238, 239, 234, 0) 80%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#bfeeefea', endColorstr='#00eeefea', GradientType=1);
 
-}
+    }
 
     #logo {
         position: fixed;
@@ -25,6 +58,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfeeefea', e
         top: 30px;
         left: 0;
     }
+
     nav {
         position: fixed;
         z-index: 10;
@@ -33,7 +67,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfeeefea', e
         height: 60px;
         padding-top: 25px;
     }
-
 
     nav ul {
         list-style-type: none;
@@ -44,50 +77,56 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfeeefea', e
     nav li {
         width: 225px;
         height: 20px;
-        float:left;
+        float: left;
         text-align: right;
     }
 
-    nav li a {
-        font-family: "Helvetica Neue Condensed Bold", sans-serif;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: #000;
-        font-size: 16px;
-        letter-spacing: 2px;
-        padding: 2px 2px 2px 2px;
-    }
-
-    nav li a:hover {
-        color: #fff;
-        background-color: #000;
-    }
-
-    nav li a.selected {
-        color: #666;
-    }
-
-    nav li a.selected:hover {
-        color: #fff;
-        background-color: #000;
-    }
-
     nav ul ul {
-        background-color: #111;
-        margin-top: 15px;
         display: none;
     }
 
-    nav ul ul li {
-        float: inherit;
+}
+
+/* mobile */
+@media only screen and (max-width: 900px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    #menu-button {
+        visibility: visible;
+        position: fixed;
+        top: 13px;
+        right: 13px;
+        background: url(../image/menu-button.svg);
+        width: 34px;
+        height: 32px;
+    }
+
+    nav {
+        position: fixed;
+        top: 0;
+        left: 100%;
+        width: 60%;
+        height: 100%;
+        background-color: #FCF749;
+        padding: 20px 0 0 10px;
+    }
+
+    nav ul ul {
+        margin-bottom: 15px;
+
     }
 
     nav ul ul li a {
-        color: #fff;
+        color: #333;
         text-transform: none;
+        margin-left: 17px;
+        letter-spacing: 0;
     }
 
     nav ul ul li a:hover {
         background-color: #000;
     }
+
 }
