--- a/views/head.ejs
+++ b/views/head.ejs
@@ -2,10 +2,9 @@
 <html lang="en_US">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Post Tool</title>
     <link href="/css/layout.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="/css/nav.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css"/>
-    <script src="/js/lib/jquery-2.1.1.min.js"></script>
-    <script src="/js/pt.js" type="text/javascript"></script>
 </head>
