--- a/views/index.ejs
+++ b/views/index.ejs
@@ -188,22 +188,22 @@
             <li>Sonic Graphics, <br>Seeing Sound</li>
             <li>Radical Graphics, <br>Chronicle Books</li>
             <li>Type in Motion, Rizzoli</li>
-            <li>Typographics Three, <br>Hearst Books Intl.</li>
+<!--            <li>Typographics Three, <br>Hearst Books Intl.</li>
             <li>Cool Sites, <br>Hearst Books Intl.</li>
             <li>Eye Magazine <br>&lsquo;Serious Doodling&rsquo;</li>
             <li>IMG SRC 100</li>
             <li>Graphic Design in America, Rockport Publishers</li>
             <li>Communication Arts <br>&lsquo;Post Tool design&rsquo; </li>
-            <li>Popeye Magazine-Japan &lsquo;PostTool&rsquo; </li>
-            <li>C - NetTelevision</li>
+            <li>Popeye Magazine-Japan &lsquo;PostTool&rsquo; </li> -->
+            <li>C - Net Television</li>
             <li>MSNBC Television, The Site</li>
             <li>Critique Magazine</li>
             <li>Creative Review &lsquo;Brainshift&rsquo;</li>
-            <li>ID Magazine &lsquo;An Interpretation of Dreams&rsquo;</li>
+            <!-- <li>ID Magazine &lsquo;An Interpretation of Dreams&rsquo;</li> -->
             <li>ID Magazine &lsquo;Electronic Youth&rsquo;</li>
-            <li>Graphis Magazine &lsquo;Multimedia by the Bay&rsquo;</li>
+            <li>Graphis Magazine <br>&lsquo;Multimedia by the Bay&rsquo;</li>
             <li>The AIGA Journal <br>&lsquo;Absolute Individuals&rsquo;</li>
-            <li>Upper &amp; lowercase Magazine &lsquo;PostTool design&rsquo;</li>
+            <li>U&amp;lc  Magazine <br>&lsquo;Post Tool design&rsquo;</li>
             <li>On-line Design Magazine &lsquo;Digitizing the Child Within&rsquo;</li>
         </ul>
 
