--- a/views/process.ejs
+++ b/views/process.ejs
@@ -11,28 +11,35 @@
 
 
     <div class="section group padboth">
-          <div class="col span_2_of_5"></div>
-      <div class="col span_3_of_5">
+        <div class="col span_2_of_5"></div>
+        <div class="col span_3_of_5">
             <h3 style="border-bottom: 1px solid #333;">Working With Us</h3>
+
             <div class="medium">
                 Our process builds and supports the best opportunities currently available.
 
-                 Post Tool classifies all software development projects into phases. A typical project progresses through
-            each of the following phases sequentially. Often we loop through the phases continuously as needs and
-            requirements grow in complexity. Our goal is to keep the software usable and logically consistent as it
-            adapts to use and matures.
+                Post Tool classifies all software development projects into phases. A typical project progresses through
+                each of the following phases sequentially. Often we loop through the phases continuously as needs and
+                requirements grow in complexity. Our goal is to keep the software usable and logically consistent as it
+                adapts to use and matures.
             </div>
             <div class="prompt"> Interested in learning more about our successful relationships with our clients?<br>
                 <a href="/contact">REQUEST A CASE STUDY.</a></div>
+
         </div>
 
-     </div>
+    </div>
 
 
     <div class="section group padboth capabilities">
-        <div class="col span_2_of_5">
-            <img id="gantt" src="image/gantt.svg" width="430">
+        <div class="col span_2_of_5"></div>
+        <div class="col span_3_of_5">
+            <h3 style="border-bottom: 1px solid #333;">Critical Phases</h3>
         </div>
+        <div class="col span_2_of_5">
+            <img id="gantt" src="image/gantt.svg" width="100%">
+        </div>
+
         <div class="col span_1_of_5">
             <h3>Discovery </h3>
         </div><div class="col span_2_of_5">
