links at bottom of pages to lead user through site

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -235,6 +235,10 @@
     </div>
     <div class="col span_1_of_5" style="margin-top: 80px; border-top: 1px solid #111;">
     </div>
+<div class="section group padboth">
+    <div class="col span_5_of_5" style="text-align:right">
+        <a href="/process">Now: Learn about our Process</a>
+    </div></div>
 </div>
 <% include footer %>
 </div>
