--- a/views/process.ejs
+++ b/views/process.ejs
@@ -138,6 +138,11 @@
                 for future maintenance.</p>
         </div>
     </div>
+  <div class="section group padboth">
+    <div class="col span_5_of_5" style="text-align:right;">
+        <a href="/contact">Now: Contact us to get started</a>
+    </div></div>
+</div>
 <% include footer %>
 </div>
 <% include foot %>
