--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -30,17 +30,20 @@
     <% include footer %>
 </div>
 <% include foot %>
-  <img src="/image/se.svg">
-    There is much more
+ <img src="/image/se.svg" style="float: left">
+<div style="float: left; margin: 42px 0px 20px 2px; padding: 0px 18px; background-color: #EEEFEA;">
+  <h3>There is much more.</h3>
 
-    Our clients are Fortune 500 companies, startups, nonprofits, universities, publishers, technologists,
-    philanthropists and most importantly, our partners.
-    We value our clients on a real scale; as experts in their field and therefore partners in collaboration.
-    Some of our most exciting work is not available to the general public.
-    Contact us if you want to know more.
+    <!--<p>Our clients are Fortune 500 companies, startups, nonprofits, universities, publishers, technologists,
+      philanthropists and most importantly, our partners. We value our clients on a real scale; as experts in their field
+      and therefore partners in collaboration.</p>-->
 
-    Business development
-    business@posttool.com
+    <p>Some of our most exciting work is not available to the general public.
+      Contact us if you want to know more.</p>
 
-    Press inquiries
-    press@posttool.com
+    <p>Business development<br>
+      <a href="mailto:business@posttool.com">business@posttool.com</a></p>
+    <p>Press inquiries<br>
+      <a href="mailto:press@posttool.com">press@posttool.com</a></p>
+
+</div>
