text revision, front page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,20 +4,21 @@
 <div class="section group">
     <div class="intro-bar"></div>
     <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
-        Thoughtful solutions framed by design &amp; supported by expertly produced technology.
+        Thoughtful solutions framed by design &amp; founded on technological sophistication.
+      <!--supported by expertly produced technology.-->
         <!--Design-driven application development. Expertly produced technology.-->
     </div>
 </div>
 <div class="section group padboth">
     <div class="col span_2_of_5"></div>
     <div class="col span_3_of_5 bigbody bigpadright">
-        In our more than 25 years of business,
-        we have helped Fortune 500 companies improve productivity.
-        We have engineered foundations for lucrative startups.
-        We have produced white labeled developer kits for mobile applications.
-        We have built business intelligence tools for non-profits.
+        In over 25 years of business,
+        we helped Fortune 500 companies explode their productivity.
+        We engineered foundations for lucrative start-ups.
+        We produced white label developer kits for mobile applications.
+        We built business intelligence tools for non-profits.
         We have hosted thousands of web sites.
-                Simply, we helped countless clients translate their vision into elegantly designed software.
+                Simply put, we help countless clients translate their visions into elegantly designed software.
 
         <br>
         <a href="/contact" class="request-case-study">REQUEST A CASE STUDY.</a>
@@ -35,30 +36,33 @@
     <div class="col span_1_of_5 hspan_2">
         <h3>Visual Design</h3>
 
-        <p>Post Tool has been involved in the San Francisco design community since the early 90s.
+        <p>We get graphic design. Post Tool has been involved in the San Francisco design community since the early 90s.
             We worked and learned from the greats like Michael Vanderbyl and Michael Cronan. We taught print and
-            interaction design at the California College of the Arts. We get graphic design. And whether you need
+            interaction design at the California College of the Arts. Whether you need
             direction or have a well established brand, we can accomodate.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Software Development</h3>
 
-        <p>We like to produce applications that can operate with a plan that is appropriate
-            to our client. We are experts at Java, Python, Javascript, Objective-C and Swift. We have
-            used all major SQL databases with various persitence layers as well as Mongo and Redis.</p>
+        <p>We love producing applications crafted for clients' objective needs, discovering your unique situational
+          requirements and developing software to attain your desires.
+          <!--We like to produce applications that can operate with a plan that is appropriate-->
+            <!--to our client.-->
+          We are experts at Java, Python, Javascript, Objective-C and Swift. We have
+            used all major SQL databases with various persistence layers as well as Mongo and Redis.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Technical Documentation</h3>
 
-        <p>While some of our clients come to us with requirements and wireframes in hand,
-            many do not. One we get an idea of the scope of your application we can produce
+        <p>Some clients come to us with requirements and wireframes in hand,
+            many do not. Once we discover the scope of your application we can produce
             architecture diagrams, functional requirements, wireframes, work flow diagrams,
             entity-relationship diagrams, and more.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Content Management</h3>
 
-        <p>Does your application have long term content management issues? Some of the applications
+        <p>Does your application have long term content management requirements? Some of the applications
             we develop manage terabytes of data with detailed permissions and work flow. We have developed
             content management systems on top of frameworks in Perl, Python, Java and Javascript
             connected to a variety SQL and NoSQL data bases.
@@ -67,17 +71,17 @@
     <div class="col span_1_of_5 hspan_2">
         <h3>Integration</h3>
 
-        <p>You have data: its in Excel, on Facebook, Google spreadsheets, in a SQL database, ... You also have
-            existing applications and systems in your private network.
-            We have experience with many platforms and ready to help provide strategy and technical
-            resources to integrate and monitor disparate systems effectively.</p>
+        <p>You have data: it may be in Excel, on Facebook, Google spreadsheets, or, perhaps it's in a SQL database.
+            You may also have existing applications and systems in your private network.
+            We have experience with many platforms and are ready to help provide strategy and technical
+            resources to integrate and monitor disparate sources and systems effectively.</p>
     </div>
 
     <div class="col span_1_of_5 hspan_2">
         <h3>Data Visualization</h3>
 
-        <p>Does your application generate really big data? There are endless possibilities in the realm of data
-            visualization.
+        <p>Does your application generate really big data sets? We can help you explore and exploit the limitless
+            potential of data visualization.
             We have experience with design and development using a variety of Javascript and iOS libraries.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
@@ -85,31 +89,32 @@
 
         <p>Need users to browse through large amounts of information or perform complex tasks? How about something
         fun that lets users "play" or interact in unconventional ways? We have produced complex dashboard control panels
-        as well as playful entertainment related game like experiences.</p>
+        as well as playful, entertaining, game-like experiences.</p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>User Experience</h3>
 
-        <p>Do you have an existing application and need to improve the user experience? We do that!
-        We gather user feedback and any other available data about use and experience and work with
-            you and your engineers to make a super usable experience. We are also happy as always
-            to design/build.
+        <p>Do you have an existing application but want to improve the user experience? We do that!
+        We gather user feedback and other data about use and experience then work with
+            you and your engineers to create a super-usable interface.
+          <!--We are always happy to design/build.-->
         </p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>Mobile Applications</h3>
 
-        <p>Mobile compatibilty is no problem, but your application might need a native iOS 7 client.
-            Whether you have and existing backend or need services to support it, we can help you
+        <p>Mobile compatibility is no problem&mdash;we build responsive web sites. Yet,
+          your application might need a native iOS 7 client.
+            Whether you have an existing backend or need services to support it, we can help you
             design, develop, test, launch, maintain and evolve the app.
         </p>
     </div>
     <div class="col span_1_of_5 hspan_2">
         <h3>System Administration</h3>
 
-        <p>We offer a variety of system admisistration services.
+        <p>We offer a variety of system administration services.
             Need a cluster? No problem. Distributed architecture is within reach. Get in touch
-            if you want to discuss your particular circumstance.</p>
+            if you want to discuss your particular circumstances.</p>
     </div>
 
 </div>
@@ -120,11 +125,14 @@
     <div class="col span_3_of_5">
         <div class="bighead">Who We Work With</div>
         <div class="medium">
-            Our clients are Fortune 500 companies, startups,
+            Our clients are Fortune 500 companies, start-ups,
             nonprofits, universities, publishers, technologists,
-            philanthropists and most importantly, our partners.
-            We value our clients on a real scale; as experts in
-            their field and therefore partners in collaboration.
+            philanthropists and &ndash; most importantly &ndash;
+            our clients are our partners.
+            We value you as experts in
+            your field and thus as partners in collaboration.
+
+
 
 
         </div>
